# lumen

./: .gitignore  .sprite  AGENTS.md  AI_NATIVE_IMPLEMENTATION.md  ARCHITECTURE_AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  LUMEN_COMPLETE_REFERENCE.md  PATTERN_MATCHING_CHANGES.md  README.md  REGISTRY_SETUP.md  ROADMAP.md  SELFHOST_TASKS.md  SPEC.md  SPEC_ADDENDUM.md  TASKS.md  TRUST_SETUP.md  Untitled  VISION.md  WORLD_CLASS_ROADMAP.md  bench_jit_vs_int.py  lumen.toml  mise.toml  mixed_mode.lm  opencode.json  package-lock.json  package.json  repl_input.txt  repro_repl  repro_repl.rs  reproduce_repl_issue.lm  tasks.md  test_enum_jit.lm  test_eval.lm  test_full_processes.lm  (+8 more)
registry-server/: Cargo.toml
registry-server/src/: auth.rs  ca.rs  main.rs  oidc.rs  storage.rs
rust/lumen-bench/: Cargo.toml
rust/lumen-bench/benches/: compiler_bench.rs  sort_bench.rs  vm_bench.rs
rust/lumen-bench/src/: lib.rs  main.rs
rust/lumen-cli/: AGENTS.md  Cargo.toml  README.md
rust/lumen-cli/benches/: compile_benchmarks.rs
rust/lumen-cli/src/: audit.rs  auth.rs  binary_cache.rs  bindgen.rs  build_script.rs  cache.rs  ci.rs  ci_output.rs  colors.rs  config.rs  dap.rs  doc.rs  error_chain.rs  fmt.rs  git.rs  lang_ref.rs  lib.rs  lint.rs  lockfile.rs  lpm.rs  lpx.rs  main.rs  module_resolver.rs  oidc.rs  pkg.rs  registry.rs  registry_cmd.rs  repl.rs  resolver.rs  semver.rs  service_template.rs  test_cmd.rs  transparency.rs  trust.rs  tuf.rs  wares.rs  wares_cli.rs  workspace.rs
rust/lumen-cli/tests/: binary_cache.rs  ci.rs  registry.rs  service_template.rs  test_registry_signatures.rs  wave22_bindgen.rs  wave24_binary_cache.rs  wave25_registry.rs  wave25_transparency.rs  workspace.rs
rust/lumen-codegen/: Cargo.toml  OPCODE_SYSTEM.md  README.md
rust/lumen-codegen/benches/: codegen_bench.rs
rust/lumen-codegen/examples/: opcode_system.rs
rust/lumen-codegen/src/: aot.rs  bench_programs.rs  collection_helpers.rs  context.rs  emit.rs  ffi.rs  ir.rs  jit.rs  jit.rs.backup  lib.rs  lower.rs  opcode_def.rs  opt.rs  orc_jit.rs  stackmap.rs  stencil_format.rs  stencils.rs  stitcher.rs  types.rs  union_helpers.rs  vm_context.rs  wasm.rs  wit.rs
rust/lumen-codegen/stencils/: README.md
rust/lumen-codegen/tests/: orc_jit.rs
rust/lumen-compiler/: AGENTS.md  Cargo.toml  README.md
rust/lumen-compiler/src/: diagnostics.rs  lang_ref.rs  lib.rs
rust/lumen-compiler/tests/: active_patterns.rs  agent_feature_tests.rs  bounds.rs  compiler_fixes_suite.rs  core_semantics_tests.rs  diagnostics_tests.rs  docs_as_tests.rs  examples_compile.rs  exhaustiveness_suite.rs  expr_features_suite.rs  fuzz_tests.rs  generics_suite.rs  i64_min_literal_suite.rs  import_recovery_tests.rs  import_tests.rs  in_tests.rs  integration_hardening.rs  lir64_tests.rs  loops_ops_suite.rs  macros.rs  markdown_native_suite.rs  multi_error_suite.rs  new_features_suite.rs  null_ops_suite.rs  parity_memory.rs  parity_verification.rs  parser_bugs_suite.rs  pattern_matching_suite.rs  pipe_tests.rs  proof_hints.rs  range_tests.rs  raw_format_test.rs  refinement_tests.rs  register_limit_suite.rs  round17_suite.rs  round18_suite.rs  sandbox.rs  smt_solver.rs  spec_markdown_sweep.rs  spec_suite.rs  (+30 more)
rust/lumen-core/: Cargo.toml  README.md
rust/lumen-core/src/: arena.rs  lib.rs  lir.rs  nb_value.rs  opcode_capabilities.rs  opcode_table.rs  strings.rs  values.rs  vm_context.rs
rust/lumen-lsp/: Cargo.toml  README.md
rust/lumen-lsp/src/: cache.rs  code_actions.rs  completion.rs  dap.rs  diagnostics.rs  document_symbols.rs  folding_ranges.rs  formatting.rs  goto_definition.rs  hover.rs  implementations.rs  inlay_hints.rs  lib.rs  main.rs  rename.rs  semantic_search.rs  semantic_tokens.rs  signature_help.rs
rust/lumen-lsp/tests/: semantic_search.rs
rust/lumen-provider-crypto/: Cargo.toml  README.md
rust/lumen-provider-crypto/src/: ed25519.rs  lib.rs
rust/lumen-provider-env/: Cargo.toml  README.md
rust/lumen-provider-env/src/: lib.rs
rust/lumen-provider-fs/: Cargo.toml  README.md
rust/lumen-provider-fs/src/: extra.rs  lib.rs
rust/lumen-provider-gemini/: Cargo.toml  README.md
rust/lumen-provider-gemini/src/: lib.rs
rust/lumen-provider-http/: Cargo.toml  README.md
rust/lumen-provider-http/src/: lib.rs
rust/lumen-provider-json/: Cargo.toml  README.md
rust/lumen-provider-json/src/: lib.rs
rust/lumen-provider-mcp/: Cargo.toml  README.md
rust/lumen-provider-mcp/src/: lib.rs
rust/lumen-provider-mcp/tests/: integration_tests.rs  test_mcp_server.py
rust/lumen-provider-process/: Cargo.toml
rust/lumen-provider-process/src/: lib.rs
rust/lumen-provider-time/: Cargo.toml
rust/lumen-provider-time/src/: lib.rs
rust/lumen-rt/: AGENTS.md  Cargo.toml  README.md  build.rs
rust/lumen-rt/benches/: json_parse_bench.rs
rust/lumen-rt/src/: arena.rs  gc.rs  jit_tier.rs  json_parser.rs  lib.rs  stencil_runtime.rs  stencil_tier.rs
rust/lumen-rt/tests/: bool_if_tests.rs  bytes_tests.rs  continuations.rs  e2e.rs  format_spec_wrapping_arithmetic_tests.rs  osr_transition.rs  parity_concurrency.rs  parse_tests.rs  test_drift_notes.rs  testing_stdlib_e2e.rs  tier_coverage.rs  tier_parity.rs  todo_resolution_tests.rs  validate_tests.rs  wave4c_performance.rs
rust/lumen-runtime/: Cargo.toml
rust/lumen-runtime/src/: actor.rs  cache.rs  channel.rs  checkpoint.rs  json_ops.rs  lib.rs  linear_collections.rs  mailbox.rs  nursery.rs  panic_boundary.rs  process.rs  scheduler.rs  schema_drift.rs  select.rs  snapshot.rs  sync_scheduler.rs  tools.rs
rust/lumen-runtime/tests/: crypto.rs  execution_graph.rs  fs_async.rs  http.rs  integration_tests.rs  net.rs  parity_durability.rs  retry.rs  schema_drift.rs  wave24_execution_graph.rs  wave26_parity_durability.rs
rust/lumen-tensor/: Cargo.toml  README.md
rust/lumen-tensor/src/: ad.rs  dtype.rs  lib.rs  nn.rs  ops.rs  optim.rs  shape.rs  simd.rs  tensor.rs  tests.rs
rust/lumen-vm/: Cargo.toml
rust/lumen-vm/src/: immix.rs  lib.rs  (+8 more)
rust/lumen-wasm/: .gitignore  Cargo.toml  README.md
(+719 files in other folders)
