[workspace]
resolver = "2"
members = [
    "rust/lumen-compiler",
    "rust/lumen-vm",
    "rust/lumen-runtime",
    "rust/lumen-cli",
    "rust/lumen-lsp",
    "rust/lumen-provider-http",
    "rust/lumen-provider-json",
    "rust/lumen-provider-fs",
    "rust/lumen-provider-mcp",
    "rust/lumen-provider-env",
    "rust/lumen-provider-crypto",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
