[workspace]
resolver = "2"
members = [
    "rust/lumen-compiler",
    "rust/lumen-vm",
    "rust/lumen-runtime",
    "rust/lumen-cli",
    "rust/lumen-lsp",
    "rust/lumen-provider-http",
    "rust/lumen-provider-json",
    "rust/lumen-provider-fs",
    "rust/lumen-provider-mcp",
    "rust/lumen-provider-gemini",
    "rust/lumen-codegen",
]
# lumen-wasm excluded - built separately via wasm-pack
exclude = ["rust/lumen-wasm"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "The AI-Native Programming Language"
authors = ["Lumen Contributors"]
repository = "https://github.com/alliecatowo/lumen"
homepage = "https://alliecatowo.github.io/lumen/"

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "js"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
