[package]
name = "lumen-registry-server"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tar = "0.4"
flate2 = "1"
hex = "0.4"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-cloudfront = "1"
aws-credential-types = "1"
hmac = "0.12"
bcrypt = "0.15"
rand = "0.8"
once_cell = "1"
parking_lot = "0.12"
regex = "1"
