[package]
name = "lumen-bench"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Benchmark harness for the Lumen compiler and VM"
publish = false

[dependencies]
lumen-compiler = { path = "../lumen-compiler" }
lumen-vm = { path = "../lumen-vm" }
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "compiler_bench"
harness = false
