[package]
name = "lumen-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lumen"
path = "src/main.rs"

[[bin]]
name = "lpm"
path = "src/lpm.rs"

[[bin]]
name = "lpx"
path = "src/lpx.rs"

[dependencies]
lumen-compiler = { path = "../lumen-compiler" }
lumen-vm = { path = "../lumen-vm" }
lumen-runtime = { path = "../lumen-runtime" }
lumen-provider-http = { path = "../lumen-provider-http", optional = true }
lumen-provider-json = { path = "../lumen-provider-json", optional = true }
lumen-provider-fs = { path = "../lumen-provider-fs", optional = true }
lumen-provider-env = { path = "../lumen-provider-env", optional = true }
lumen-provider-crypto = { path = "../lumen-provider-crypto", optional = true }
lumen-provider-gemini = { path = "../lumen-provider-gemini", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
rustyline = "15"

[features]
default = ["http", "json", "fs", "env", "crypto"]
http = ["lumen-provider-http"]
json = ["lumen-provider-json"]
fs = ["lumen-provider-fs"]
env = ["lumen-provider-env"]
crypto = ["lumen-provider-crypto"]
gemini = ["lumen-provider-gemini"]
