[package]
name = "lumen-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "lumen"
path = "src/main.rs"

[[bin]]
name = "lpm"
path = "src/lpm.rs"

[[bin]]
name = "lpx"
path = "src/lpx.rs"

[dependencies]
lumen-compiler = { path = "../lumen-compiler", version = "0.1.1" }
lumen-vm = { path = "../lumen-vm", version = "0.1.1" }
lumen-runtime = { path = "../lumen-runtime", version = "0.1.1" }
lumen-provider-http = { path = "../lumen-provider-http", version = "0.1.1", optional = true }
lumen-provider-json = { path = "../lumen-provider-json", version = "0.1.1", optional = true }
lumen-provider-fs = { path = "../lumen-provider-fs", version = "0.1.1", optional = true }
lumen-provider-env = { path = "../lumen-provider-env", version = "0.1.1", optional = true }
lumen-provider-crypto = { path = "../lumen-provider-crypto", version = "0.1.1", optional = true }
lumen-provider-gemini = { path = "../lumen-provider-gemini", version = "0.1.1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
rustyline = "15"

[features]
default = ["http", "json", "fs", "env", "crypto"]
http = ["lumen-provider-http"]
json = ["lumen-provider-json"]
fs = ["lumen-provider-fs"]
env = ["lumen-provider-env"]
crypto = ["lumen-provider-crypto"]
gemini = ["lumen-provider-gemini"]
