[package]
name = "lumen-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "lumen_cli"
path = "src/lib.rs"

[[bin]]
name = "lumen"
path = "src/bin/lumen.rs"

[[bin]]
name = "wares"
path = "src/bin/wares.rs"


[dependencies]
lumen-compiler = { path = "../lumen-compiler", version = "0.5.0" }
lumen-vm = { path = "../lumen-vm", version = "0.5.0" }
lumen-runtime = { path = "../lumen-runtime", version = "0.5.0" }
lumen-provider-http = { path = "../lumen-provider-http", version = "0.5.0", optional = true }
lumen-provider-json = { path = "../lumen-provider-json", version = "0.5.0", optional = true }
lumen-provider-fs = { path = "../lumen-provider-fs", version = "0.5.0", optional = true }
lumen-provider-env = { path = "../lumen-provider-env", version = "0.5.0", optional = true }
lumen-provider-crypto = { path = "../lumen-provider-crypto", version = "0.5.0", optional = true }
lumen-provider-gemini = { path = "../lumen-provider-gemini", version = "0.5.0", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
dirs = "5.0"
tar = "0.4"
flate2 = "1"
rustyline = "15"

# Authentication dependencies
keyring = { version = "3", optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
rand = { version = "0.8", optional = true }
base64 = "0.22"
rpassword = "7"
thiserror = { workspace = true }
glob = "0.3"
shell-words = "1.1"
hmac = "0.12"
hex = "0.4"

# Trust/Sigstore dependencies
urlencoding = "2"
open = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
regex = "1"
humantime = "2"
ctrlc = "3"

[features]
default = ["http", "json", "fs", "env", "crypto", "keyring", "ed25519"]
http = ["lumen-provider-http"]
json = ["lumen-provider-json"]
fs = ["lumen-provider-fs"]
env = ["lumen-provider-env"]
crypto = ["lumen-provider-crypto"]
gemini = ["lumen-provider-gemini"]
keyring = ["dep:keyring"]
ed25519 = ["dep:ed25519-dalek", "dep:rand"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compile_benchmarks"
harness = false