[package]
name = "lumen-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lumen native code generation via Cranelift"
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-native = "0.116"
cranelift-object = "0.116"
cranelift-jit = { version = "0.116", features = ["selinux-fix"] }
target-lexicon = "0.13"
lumen-core = { path = "../lumen-core", version = "0.1.0" }
lumen-compiler = { path = "../lumen-compiler" }
thiserror = { workspace = true }

[[bench]]
name = "codegen_bench"
harness = false
