[package]
name = "lumen-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

[dev-dependencies]
lumen-vm = { path = "../lumen-vm", version = "0.2.0" }
