[package]
name = "lumen-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "lumen-lsp"
path = "src/main.rs"

[dependencies]
lumen-compiler = { path = "../lumen-compiler", version = "0.4.0" }
lumen-cli = { path = "../lumen-cli", version = "0.4.0" }
lsp-server = "0.7"
lsp-types = "0.97"
serde = { workspace = true }
serde_json = { workspace = true }
