[package]
name = "lumen-provider-env"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
lumen-runtime = { path = "../lumen-runtime", version = "0.1.1" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
