[package]
name = "lumen-provider-gemini"
version = "0.1.1"
edition = "2021"

[dependencies]
lumen-runtime = { path = "../lumen-runtime", version = "0.1.1" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
