[package]
name = "lumen-provider-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lumen-runtime = { path = "../lumen-runtime" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
