[package]
name = "lumen-provider-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lumen-runtime = { path = "../lumen-runtime" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
