[package]
name = "lumen-provider-json"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
lumen-runtime = { path = "../lumen-runtime", version = "0.2.0" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
