[package]
name = "lumen-provider-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
lumen-rt = { path = "../lumen-rt", version = "0.5.0" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
lumen-rt = { path = "../lumen-rt", version = "0.5.0" }
