[package]
name = "lumen-rt"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[features]
default = ["jit"]
jit = ["dep:lumen-codegen"]

[dependencies]
lumen-core = { path = "../lumen-core", version = "0.1.0" }
lumen-compiler = { path = "../lumen-compiler", version = "0.5.0" }
lumen-codegen = { path = "../lumen-codegen", version = "0.5.0", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = "0.13"
sha2 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
num-bigint = { workspace = true, features = ["serde"] }
num-traits = { workspace = true }
regex = "1"
ureq = "2"
once_cell = "1"
bincode = "1"
crossbeam-deque = "0.8"
crossbeam-channel = "0.5"
num_cpus = "1.16"
flate2 = "1"

[dev-dependencies]
lumen-provider-crypto = { path = "../lumen-provider-crypto" }
lumen-provider-env = { path = "../lumen-provider-env" }
lumen-provider-fs = { path = "../lumen-provider-fs" }
criterion = "0.5"

[[bench]]
name = "json_parse_bench"
harness = false

[build-dependencies]
object = { version = "0.36", features = ["read"] }
