[package]
name = "lumen-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
lumen-provider-crypto = { path = "../lumen-provider-crypto" }
lumen-provider-env = { path = "../lumen-provider-env" }
lumen-provider-fs = { path = "../lumen-provider-fs" }
