[package]
name = "lumen-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bincode = "1"
crossbeam-deque = "0.8"
crossbeam-channel = "0.5"
num_cpus = "1.16"
flate2 = "1"

[dev-dependencies]
lumen-provider-crypto = { path = "../lumen-provider-crypto" }
lumen-provider-env = { path = "../lumen-provider-env" }
lumen-provider-fs = { path = "../lumen-provider-fs" }
