[package]
name = "lumen-tensor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "First-class tensor type with automatic differentiation for Lumen"
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
num-traits = { workspace = true }
