[package]
name = "lumen-wasm"
version = "0.2.0"
edition = "2021"
authors = ["Lumen Contributors"]
description = "WebAssembly bindings for the Lumen compiler and VM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alliecatowo/lumen"
homepage = "https://alliecatowo.github.io/lumen/"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
lumen-compiler = { path = "../lumen-compiler" }
lumen-vm = { path = "../lumen-vm" }
lumen-runtime = { path = "../lumen-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size in release builds
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
